[tool.poetry]
name = "wasabi-reporter"
version = "0.0.0"
description = ""
authors = ["Bink DevOps <devops@bink.com>"]
readme = "README.md"
packages = [{include = "wasabi_reporter"}]

[tool.poetry.scripts]
wasabi_reporter = "wasabi_reporter:main"

[tool.poetry.dependencies]
python = "^3.10"
azure-storage-blob = "^12.14.1"
requests = "^2.28.1"
APScheduler = "^3.9.1"
azure-keyvault-secrets = "^4.6.0"
azure-identity = "^1.11.0"
redis = "^4.4.4"
python-json-logger = "^2.0.4"

[tool.poetry.group.dev.dependencies]
Flake8-pyproject = "^1.1.0.post0"
isort = "^5.10.1"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
